--- a/tests/main.yml
+++ b/tests/main.yml
@@ -21,10 +21,12 @@
   roles:
     - role: amtega.tomcat
       tomcat_name: tomcat@server1
+      tomcat_base: /srv/tomcat/tomcat@server1
       tomcat_version: 8.0.9
 
     - role: amtega.tomcat
       tomcat_name: tomcat@server2
+      tomcat_base: /srv/tomcat/tomcat@server2
       tomcat_version: 8.0.9
       tomcat_use_native_daemon: false
       tomcat_server_port: 8006
@@ -35,7 +37,7 @@
     - name: download sample application
       get_url:
         url: https://tomcat.apache.org/tomcat-8.0-doc/appdev/sample/sample.war
-        dest: /tmp
+        dest: /tmp/sample2.war
         validate_certs: false
         timeout: 60
   tags:
@@ -47,22 +49,34 @@
   roles:
     - role: amtega.tomcat_application
   vars:
-    tomcat_application_name: MyApp
+    tomcat_application_name: myapp
     tomcat_application_instances:
       - tomcat@server1
       - tomcat@server2
     tomcat_application_artifacts:
-      - url: https://tomcat.apache.org/tomcat-8.0-doc/appdev/sample/sample.war
+      - id: sample_war
+        type: https
+        host: https://tomcat.apache.org
+        path: /tomcat-8.0-doc/appdev/sample
+        file: sample.war
         dest: webapps
-        timeout: 60
-        validate_certs: false
-      - url: https://tomcat.apache.org/tomcat-8.0-doc/appdev/sample/sample.war
-        dest: webapps/sample2.war
-        timeout: 60
-        validate_certs: false
-      - url: file:///tmp/sample.war
-        dest: webapps/sample3.war
-        validate_certs: false
+        timeout: 120
+        validate_certs: no
+      - id: release_notes
+        type: https
+        host: https://archive.apache.org
+        path: /dist/tomcat/tomcat-8/v8.0.1
+        file: RELEASE-NOTES
+        dest: logs
+        timeout: 120
+        validate_certs: no
+      - id: sample2_war
+        type: http
+        host: "file:"
+        path: /tmp
+        file: sample2.war
+        dest: webapps
+        timeout: 120
     tomcat_application_dirs:
       - "config/{{ tomcat_application_name }}"
       - "log/{{ tomcat_application_name }}"
@@ -147,10 +161,8 @@
       loop:
         - /srv/tomcat/tomcat@server1/webapps/sample.war
         - /srv/tomcat/tomcat@server1/webapps/sample2.war
-        - /srv/tomcat/tomcat@server1/webapps/sample3.war
         - /srv/tomcat/tomcat@server2/webapps/sample.war
         - /srv/tomcat/tomcat@server2/webapps/sample2.war
-        - /srv/tomcat/tomcat@server2/webapps/sample3.war
       register: check_artifacts_result
 
     - name: check application artifacts exist
@@ -172,10 +184,8 @@
       loop:
         - http://localhost:8080/sample
         - http://localhost:8080/sample2
-        - http://localhost:8080/sample3
         - http://localhost:8081/sample
         - http://localhost:8081/sample2
-        - http://localhost:8081/sample3
   tags:
     - idempotence
 
@@ -184,17 +194,34 @@
   roles:
     - role: amtega.tomcat_application
   vars:
-      tomcat_application_name: sample
+      tomcat_application_name: myapp
       tomcat_application_instances:
         - tomcat@server1
         - tomcat@server2
       tomcat_application_artifacts:
-        - url: https://tomcat.apache.org/tomcat-8.0-doc/appdev/sample/sample.war
+        - id: sample_war
+          type: https
+          host: https://tomcat.apache.org
+          path: /tomcat-8.0-doc/appdev/sample
+          file: sample.war
           dest: webapps
-        - url: https://tomcat.apache.org/tomcat-8.0-doc/appdev/sample/sample.war
-          dest: webapps/sample2.war
-        - url: file:///tmp/sample.war
-          dest: webapps/sample3.war
+          timeout: 120
+          validate_certs: no
+        - id: release_notes
+          type: https
+          host: https://archive.apache.org
+          path: /dist/tomcat/tomcat-8/v8.0.1
+          file: RELEASE-NOTES
+          dest: logs
+          timeout: 120
+          validate_certs: no
+        - id: sample2_war
+          type: http
+          host: "file:"
+          path: /tmp
+          file: sample2.war
+          dest: webapps
+          timeout: 120
       tomcat_application_dirs:
         - "config/{{ tomcat_application_name }}"
         - "log/{{ tomcat_application_name }}"
@@ -202,10 +229,34 @@
         - "data/{{ tomcat_application_name }}"
         - "resource/{{ tomcat_application_name }}"
       tomcat_application_datasources:
-        - name: "jdbc/{{ tomcat_application_name }}DS"
+        - name: "jdbc/{{ tomcat_application_name }}DS01"
+          auth: Container
+          type: acme.jdbc.pool.AcmeDataSource
+          factory: acme.jdbc.pool.AcmeDataSourceFactory
+          driverClassName: acme.jdbc.AcmeDriver
+          maxTotal: 100
+          maxIdle: 30
+          maxWaitMilli: 10000
+          url: dbc:acme:@DATABASE
+          user: app
+          password: app_password
+
+        - name: "jdbc/{{ tomcat_application_name }}DS02"
+          auth: Container
+          type: acme.jdbc.pool.AcmeDataSource
+          factory: acme.jdbc.pool.AcmeDataSourceFactory
+          driverClassName: acme.jdbc.AcmeDriver
+          maxTotal: 100
+          maxIdle: 30
+          maxWaitMilli: 10000
+          url: dbc:acme:@DATABASE
+          user: app
+          password: app_password
       tomcat_application_state: absent
       tomcat_application_dirs_remove: true
   tasks:
+    - meta: flush_handlers
+
     - name: search application dirs
       stat:
         path: "{{ item.0.base }}/{{ item.1 }}"
@@ -245,16 +296,12 @@
       loop:
         - /srv/tomcat/tomcat@server1/webapps/sample.war
         - /srv/tomcat/tomcat@server1/webapps/sample2.war
-        - /srv/tomcat/tomcat@server1/webapps/sample3.war
         - /srv/tomcat/tomcat@server1/webapps/sample
         - /srv/tomcat/tomcat@server1/webapps/sample2
-        - /srv/tomcat/tomcat@server1/webapps/sample3
         - /srv/tomcat/tomcat@server2/webapps/sample.war
         - /srv/tomcat/tomcat@server2/webapps/sample2.war
-        - /srv/tomcat/tomcat@server2/webapps/sample3.war
         - /srv/tomcat/tomcat@server2/webapps/sample
         - /srv/tomcat/tomcat@server2/webapps/sample2
-        - /srv/tomcat/tomcat@server2/webapps/sample3
       register: check_application_artifacts_result
 
     - name: check application artifacts does not exist
@@ -276,15 +323,13 @@
       loop:
         - http://localhost:8080/sample
         - http://localhost:8080/sample2
-        - http://localhost:8080/sample3
         - http://localhost:8081/sample
         - http://localhost:8081/sample2
-        - http://localhost:8081/sample3
 
-- name: cleanup docker sandbox
-  hosts: localhost
-  roles:
-    - role: amtega.docker_sandbox
-      docker_sandbox_state: absent
-  tags:
-    - sandbox
+# - name: cleanup docker sandbox
+#   hosts: localhost
+#   roles:
+#     - role: amtega.docker_sandbox
+#       docker_sandbox_state: absent
+#   tags:
+#     - sandbox
