--- a/tasks/check.yml
+++ b/tasks/check.yml
@@ -2,24 +2,7 @@
 # Role check tasks
 
 - block:
-    - name: assert platform is supported
-      assert:
-        that:
-          - distribution in tomcat_application_supported_distributions
-          - >-
-            ansible_facts.distribution_version
-            is version(
-              tomcat_application_supported_versions[distribution], ">=")
-      vars:
-        distribution: "{{ ansible_facts.distribution | lower }}"
-
-    - name: verify role mandatory variables
-      assert:
-        that:
-          - tomcat_application_name is defined
-        msg: missing mandatory role variable
-
-    - name: verify role mandatory variables
+    - name: verify tomcat server instances
       assert:
         that:
           - item in server_instances_names
