--- a/tasks/directories.yml
+++ b/tasks/directories.yml
@@ -32,4 +32,4 @@
         label: "{{ item.0.base }}/{{ item.1 }}"
   tags:
     - role::tomcat_application
-    - role::tomcat_application::dirs
+    - role::tomcat_application::directories
