--- a/tasks/facts.yml
+++ b/tasks/facts.yml
@@ -13,28 +13,33 @@
 
     - name: check instances autodeploy settings
       xml:
-        path: "{{ config_path }}"
-        xpath: "{{ host_xpath }}"
+        path: "{{ tomcat_application_config_path }}"
+        xpath: "{{ tomcat_application_host_xpath }}"
         content: attribute
       register: tomcat_application_check_autodeploy_result
       loop: >-
         {{ tomcat_application_search_instances_result.stdout_lines
            | default([]) }}
       loop_control:
-        label: "{{ tomcat_base }}"
+        label: "{{ tomcat_application_tomcat_base }}"
       vars:
-        fields: "{{ item.split(',') | map('trim') | list }}"
-        command: "{{ fields[2] }}"
-        tomcat_base: >-
-          {{ command.split("-D")
+        tomcat_application_fields: "{{ item.split(',') | map('trim') | list }}"
+        tomcat_application_command: "{{ tomcat_application_fields[2] }}"
+        tomcat_application_tomcat_base: >-
+          {{ tomcat_application_command.split("-D")
             | select("match", "catalina.base")
             | first
             | regex_replace("catalina.base=", "")
             | trim }}
-        service_xpath: "/Server/Service[@name='Catalina']"
-        engine_xpath: "{{ service_xpath }}/Engine[@name='Catalina']"
-        host_xpath: "{{ engine_xpath }}/Host[@name='localhost']"
-        config_path: "{{ tomcat_base }}/{{ tomcat_application_server_config }}"
+        tomcat_application_service_xpath: "/Server/Service[@name='Catalina']"
+        tomcat_application_engine_xpath: >-
+          {{ tomcat_application_service_xpath }}/Engine[@name='Catalina']
+        tomcat_application_host_xpath: >-
+          {{ tomcat_application_engine_xpath }}/Host[@name='localhost']
+        tomcat_application_config_path: >-
+          {{ tomcat_application_tomcat_base
+             +"/"
+             + tomcat_application_server_config }}
 
     - name: setup tomcat instances facts
       set_fact:
@@ -42,3 +47,4 @@
           {{ lookup('template', 'tomcat_facts.json.j2') | from_yaml }}
   tags:
     - role::tomcat_application
+    - role::tomcat_application::facts
