--- a/tasks/datasources.yml
+++ b/tasks/datasources.yml
@@ -2,6 +2,18 @@
 # Tasks to setup application dirs
 
 - block:
+    - name: apply templates to data sources
+      set_fact:
+        tomcat_application_datasources_templated: >-
+          {{ lookup("template", "template_ds.yml" )}}
+      loop: "{{ tomcat_application_datasources }}}"
+      loop_control:
+        loop_var: tomcat_application_datasource
+        index_var: tomcat_application_datasource_index
+        label: "{{ tomcat_application_datasource_index }}"
+
+    - fail:
+
     - name: setup application datasources attributes
       xml:
         path: "{{ ds_path }}"
