--- a/tests/main.yml
+++ b/tests/main.yml
@@ -49,6 +49,30 @@
   roles:
     - role: amtega.tomcat_application
   vars:
+    mysql_datasource_template:
+      name: >-
+        {{ "jdbc/"
+           + tomcat_application_name
+           + "DS"
+           + "%02d" | format(tomcat_application_datasource_index) }}
+      auth: Container
+      factory: org.apache.tomcat.jdbc.pool.DataSourceFactory
+      type: javax.sql.DataSource
+      driverClassName: com.mysql.jdbc.Driver
+      # url: "jdbc:mysql://{{ tomcat_application_datasource.server }}"
+      testWhileIdle: "false"
+      testOnBorrow: "true"
+      testOnReturn: "false"
+      validationQuery: "SELECT 1 FROM DUAL"
+      validationInterval: 30000
+      timeBetweenEvictionRunsMillis: 30000
+      minIdle: 0
+      maxIdle: 30
+      initialSize: 5
+      maxActive: 100
+      maxWait: 10000
+      parameters: ['useSSL=false']
+
     tomcat_application_name: myapp
     tomcat_application_instances:
       - tomcat@server1
@@ -84,15 +108,8 @@
       - "data/{{ tomcat_application_name }}"
       - "resource/{{ tomcat_application_name }}"
     tomcat_application_datasources:
-      - name: "jdbc/{{ tomcat_application_name }}DS01"
-        auth: Container
-        type: acme.jdbc.pool.AcmeDataSource
-        factory: acme.jdbc.pool.AcmeDataSourceFactory
-        driverClassName: acme.jdbc.AcmeDriver
-        maxTotal: 100
-        maxIdle: 30
-        maxWaitMilli: 10000
-        url: dbc:acme:@DATABASE
+      - template: mysql_datasource_template
+        server: mysql.acme.com
         user: app
         password: app_password
 
