--- a/tests/main.yml
+++ b/tests/main.yml
@@ -66,8 +66,10 @@
       validationQuery: "SELECT 1 FROM DUAL"
       validationInterval: 30000
       timeBetweenEvictionRunsMillis: 30000
+      maxTotal: 100
       minIdle: 0
       maxIdle: 30
+      maxWaitMilli: 10000
       initialSize: 5
       maxActive: 100
       maxWait: 10000
