--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -22,11 +22,13 @@
         {{ instance.base }}/{{ tomcat_application_instance_shutdown
                                | default(default_shutdown) }} ;
         sleep {{ tomcat_application_instance_restart_pause }}
+      args:
+        warn: no
       when:
         - tomcat_application_instance_shutdown is defined
         - tomcat_application_instance_shutdown is not none
         - tomcat_application_instance_shutdown | length > 0
-      loop:  >-
+      loop: >-
         {{ tomcat_application_server_instances
            | selectattr("service", "equalto", false)
            | list }}
@@ -45,8 +47,8 @@
       # valid return state !=0 if the process is running
 
     - name: tomcat_application start tomcat instance using custom scripts
-      shell: "{{ instance.base }}/{{ tomcat_application_instance_startup
-                                     | default(default_startup) }}"
+      command: "{{ instance.base }}/{{ tomcat_application_instance_startup
+                                       | default(default_startup) }}"
       register: tomcat_application_start_instance_result
       failed_when: >-
         tomcat_application_start_instance_result.rc != 0
@@ -56,7 +58,7 @@
         - tomcat_application_instance_startup is defined
         - tomcat_application_instance_startup is not none
         - tomcat_application_instance_startup | length > 0
-      loop:  >-
+      loop: >-
         {{ tomcat_application_server_instances
            | selectattr("service", "equalto", false)
            | list }}
