--- a/tasks/artifacts.yml
+++ b/tasks/artifacts.yml
@@ -2,64 +2,40 @@
 # Tasks to setup application artifacts
 
 - block:
-    - block:
-        - name: setup fact with application artifacts
-          set_fact:
-            tomcat_artifacts_deployed: >-
-              {{ lookup('template', 'artifacts.yml.j2') | from_yaml }}
+    - name: setup fact with application artifacts
+      set_fact:
+        tomcat_artifacts_deployed: >-
+          {{ lookup('template', 'artifacts.yml.j2') | from_yaml }}
 
-        - name: deploy tomcat application artifacts
-          include_role:
-            name: amtega.artifact
-          vars:
-            artifact_list: "{{ tomcat_artifacts_deployed }}"
-          when: tomcat_application_state == "present"
-
-        - name: determining if it is necessary to restart the tomcat service
-          command: /bin/true
-          changed_when: artifact_result_item.changed
-          loop: >-
-            {{ query('nested',
-                     tomcat_application_server_instances,
-                     tomcat_application_artifacts) }}
-          loop_control:
-            loop_var: tomcat_application_item
-            label: >-
-              {{ tomcat_application_item.0.base }}
-              {{ tomcat_application_item.1.file }}
-          notify:
-            - shutdown tomcat instance
-          vars:
-            artifact_result_item: >-
-              {{ artifact_result["tomcat_application_"
-                                 + tomcat_application_name
-                                 + "_"
-                                 + tomcat_application_item.1.id] }}
+    - name: deploy tomcat application artifacts
+      include_role:
+        name: amtega.artifact
+      vars:
+        artifact_list: "{{ tomcat_artifacts_deployed }}"
       when: tomcat_application_state == "present"
 
-    - block:
-        - name: remove tomcat application artifacts
-          file:
-            path: >-
-              {{ tomcat_application_item.0.base
-                 +"/"
-                 + tomcat_application_item.1.dest
-                 + "/"
-                 + tomcat_application_item.1.file }}
-            state: absent
-          register: tomcat_application_undeploy_artifacts_result
-          loop: >-
-            {{ query('nested',
-                     tomcat_application_server_instances,
-                     tomcat_application_artifacts) }}
-          loop_control:
-            loop_var: tomcat_application_item
-            label: >-
-              {{ tomcat_application_item.0.base }}
-              {{ tomcat_application_item.1.file }}
-          notify:
-            - shutdown tomcat instance
+    - name: determining if it is necessary to restart the tomcat service
+      command: /bin/true
+      changed_when: artifact_result_item.changed
+      loop: >-
+        {{ query('nested',
+                 tomcat_application_server_instances,
+                 tomcat_application_artifacts) }}
+      loop_control:
+        loop_var: tomcat_application_item
+        label: >-
+          {{ tomcat_application_item.0.base }}
+          {{ tomcat_application_item.1.file }}
+      notify:
+        - shutdown tomcat instance
+      vars:
+        artifact_result_item: >-
+          {{ artifact_result["tomcat_application_"
+                             + tomcat_application_name
+                             + "_"
+                             + tomcat_application_item.1.id] }}
 
+    - block:
         - name: remove tomcat application deployed directories
           file:
             path: >-
@@ -80,7 +56,7 @@
             loop_var: tomcat_application_item
             label: >-
               {{ tomcat_application_item.0.base }}
-              (tomcat_application_item.1.file | splitext).0
+              {{ (tomcat_application_item.1.file | splitext).0 }}
           notify:
             - shutdown tomcat instance
       when: tomcat_application_state == "absent"
